[gd_scene load_steps=25 format=3 uid="uid://cmmesa7n7g57y"]

[ext_resource type="Script" path="res://shop.gd" id="1_o5q6q"]
[ext_resource type="PackedScene" uid="uid://bdm5jwm47d1y7" path="res://shop_item.tscn" id="2_axhwf"]
[ext_resource type="Texture2D" uid="uid://dfgjc4aocuv8k" path="res://assets/images/coin.png" id="5_rflmd"]
[ext_resource type="Texture2D" uid="uid://c625v37m48i67" path="res://assets/images/ruby.png" id="6_2p448"]
[ext_resource type="Texture2D" uid="uid://cscflrxnkofpt" path="res://assets/images/ascend.jpg" id="6_daqp4"]
[ext_resource type="Texture2D" uid="uid://ceev1dhj6vu4e" path="res://assets/images/juice.png" id="7_8pokb"]
[ext_resource type="Texture2D" uid="uid://cdfl08buu1mvf" path="res://assets/images/ascend_hover.jpg" id="7_gdvgt"]
[ext_resource type="Texture2D" uid="uid://drkunk3i566eb" path="res://assets/images/ascend_click.jpg" id="8_ywu6w"]
[ext_resource type="AudioStream" uid="uid://cvwk1dk3cg3kw" path="res://assets/audio/bonk.wav" id="9_331q0"]
[ext_resource type="Texture2D" uid="uid://c0ob2ohkje164" path="res://assets/images/goblin.jpg" id="9_oso6u"]
[ext_resource type="AudioStream" uid="uid://b65rcqwd40prp" path="res://assets/audio/nice_la.wav" id="10_3owwi"]
[ext_resource type="Texture2D" uid="uid://drxjh802mguu0" path="res://assets/images/goblin_hover.jpg" id="10_kiwjt"]
[ext_resource type="Texture2D" uid="uid://cujohegqnl1hl" path="res://assets/images/goblin_click.jpg" id="11_flxvr"]
[ext_resource type="Texture2D" uid="uid://ni715cqkli63" path="res://assets/images/icbm.jpg" id="12_nvlit"]
[ext_resource type="Texture2D" uid="uid://cqlqvwkermvok" path="res://assets/images/icbm_hover.jpg" id="13_uhflh"]
[ext_resource type="AudioStream" uid="uid://biicbtb8dn6oq" path="res://assets/audio/goblin.wav" id="14_7fy7g"]
[ext_resource type="Texture2D" uid="uid://cr4aqrldcqefq" path="res://assets/images/icbm_click.jpg" id="14_hch44"]
[ext_resource type="AudioStream" uid="uid://dq7fy21lyw5dx" path="res://assets/audio/icbm.wav" id="18_gvrky"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gv76q"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1fwat"]
bg_color = Color(1, 0.846802, 0.0195312, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tidgv"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bmvws"]
bg_color = Color(1, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gox60"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l36pc"]
bg_color = Color(0, 0.839216, 0, 1)

[node name="Shop" type="Node2D"]
script = ExtResource("1_o5q6q")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1000.0
offset_bottom = 351.0
color = Color(0.313726, 0.286275, 0.505882, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="CoinProgressBar" type="ProgressBar" parent="HBoxContainer/MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(30, 300)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_gv76q")
theme_override_styles/fill = SubResource("StyleBoxFlat_1fwat")
value = 30.0
fill_mode = 3
show_percentage = false

[node name="CoinNum" type="Label" parent="HBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/CoinProgressBar"]
layout_mode = 0
offset_right = 32.0
offset_bottom = 300.0
text = "N"
horizontal_alignment = 1
vertical_alignment = 2

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("5_rflmd")

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="RubyProgressBar" type="ProgressBar" parent="HBoxContainer/MarginContainer/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(30, 300)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_tidgv")
theme_override_styles/fill = SubResource("StyleBoxFlat_bmvws")
value = 30.0
fill_mode = 3
show_percentage = false

[node name="RubyNum" type="Label" parent="HBoxContainer/MarginContainer/HBoxContainer/VBoxContainer2/RubyProgressBar"]
layout_mode = 0
offset_right = 32.0
offset_bottom = 300.0
text = "N"
horizontal_alignment = 1
vertical_alignment = 2

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
texture = ExtResource("6_2p448")

[node name="VBoxContainer3" type="VBoxContainer" parent="HBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="JuiceProgressBar" type="ProgressBar" parent="HBoxContainer/MarginContainer/HBoxContainer/VBoxContainer3"]
custom_minimum_size = Vector2(30, 300)
layout_mode = 2
theme_override_constants/outline_size = 1
theme_override_styles/background = SubResource("StyleBoxFlat_gox60")
theme_override_styles/fill = SubResource("StyleBoxFlat_l36pc")
value = 30.0
fill_mode = 3
show_percentage = false

[node name="JuiceNum" type="Label" parent="HBoxContainer/MarginContainer/HBoxContainer/VBoxContainer3/JuiceProgressBar"]
layout_mode = 0
offset_right = 32.0
offset_bottom = 300.0
text = "N"
horizontal_alignment = 1
vertical_alignment = 2

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/MarginContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
texture = ExtResource("7_8pokb")

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 10

[node name="GridContainer" type="GridContainer" parent="HBoxContainer/MarginContainer2"]
layout_mode = 2
columns = 3

[node name="Ascend" parent="HBoxContainer/MarginContainer2/GridContainer" instance=ExtResource("2_axhwf")]
layout_mode = 2
label = "Ascend 1"
image = ExtResource("6_daqp4")
image_hover = ExtResource("7_gdvgt")
image_click = ExtResource("8_ywu6w")
cost_coin = 3
cost_ruby = 3
cost_juice = 3

[node name="Goblin" parent="HBoxContainer/MarginContainer2/GridContainer" instance=ExtResource("2_axhwf")]
layout_mode = 2
label = "Goblin"
image = ExtResource("9_oso6u")
image_hover = ExtResource("10_kiwjt")
image_click = ExtResource("11_flxvr")
cost_coin = 2
cost_juice = 1

[node name="ICBM" parent="HBoxContainer/MarginContainer2/GridContainer" instance=ExtResource("2_axhwf")]
layout_mode = 2
label = "ICBM"
image = ExtResource("12_nvlit")
image_hover = ExtResource("13_uhflh")
image_click = ExtResource("14_hch44")
cost_coin = 1
cost_ruby = 1
cost_juice = 1

[node name="BonkPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_331q0")

[node name="NicePlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_3owwi")
volume_db = -8.362

[node name="GoblinPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_7fy7g")

[node name="ICBMPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("18_gvrky")

[connection signal="clicked" from="HBoxContainer/MarginContainer2/GridContainer/Ascend" to="." method="_on_ascend_clicked"]
[connection signal="clicked" from="HBoxContainer/MarginContainer2/GridContainer/Goblin" to="." method="_on_goblin_clicked"]
[connection signal="clicked" from="HBoxContainer/MarginContainer2/GridContainer/ICBM" to="." method="_on_icbm_clicked"]
